--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install and Build
         run: |
           yarn install
-          yarn build
+          yarn docs:build
       - name: Deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
