--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,8 @@ jobs:
           yarn install
           yarn docs:build
       - name: Deploy
-        uses: easingthemes/ssh-deploy@v2.0.7
-        env:
+        uses: easingthemes/ssh-deploy@v5.0.0
+        with:
           name: use rsa deploy
           REMOTE_HOST: ${{ secrets.SERVER_HOST }}
           REMOTE_USER: ${{ secrets.SERVER_USERNAME }}
