--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
-/.vitepress/dist
-/.vitepress/cache
+/docs/.vitepress/dist
 yarn.lock
+/docs/.vitepress/cache
