--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "dependencies": {
     "canvas-confetti": "^1.9.2",
     "sweetalert2": "^11.10.3",
-    "vitepress": "^1.0.0-rc.40"
+    "vitepress": "^1.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   }
 }
